--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indri-ui",
+  "name": "ai-tutor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,7 +18,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -27,9 +27,11 @@
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
     "react": "^18",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "shadcn-ui": "^0.2.3",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
