--- a/package.json
+++ b/package.json
@@ -1,49 +1,56 @@
 {
-  "name": "ai-tutor",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fontsource/lato": "^5.1.0",
-    "@fontsource/roboto": "^5.1.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@vercel/analytics": "^1.3.1",
-    "axios": "^1.7.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "lucide-react": "^0.453.0",
-    "next": "^14.2.15",
-    "react": "^18",
-    "react-canvas-draw": "^1.2.1",
-    "react-dom": "^18",
-    "react-icons": "^5.4.0",
-    "shadcn-ui": "^0.2.3",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@shadcn/ui": "^0.0.4",
-    "@types/node": "^20.16.12",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5"
-  }
+    "name": "ai-tutor",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@fontsource/lato": "^5.1.0",
+        "@fontsource/roboto": "^5.1.0",
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-navigation-menu": "^1.2.1",
+        "@radix-ui/react-popover": "^1.1.2",
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.6",
+        "@vercel/analytics": "^1.3.1",
+        "axios": "^1.7.7",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
+        "file-saver": "^2.0.5",
+        "html2canvas": "^1.4.1",
+        "lucide-react": "^0.453.0",
+        "next": "^14.2.15",
+        "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+        "react-canvas-draw": "^1.2.1",
+        "react-dom": "^18",
+        "react-icons": "^5.4.0",
+        "shadcn-ui": "^0.2.3",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@shadcn/ui": "^0.0.4",
+        "@types/node": "^20.16.12",
+        "@types/react": "^18",
+        "@types/react-canvas-draw": "^1.2.4",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.15",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
+        "typescript": "^5"
+    },
+    "peerDependencies": {
+        "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    }
 }
